fixed carousel overflow x bug

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -9,6 +9,7 @@ html {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 62.5%;
   background: #eee;
+  overflow-x: hidden;
 }
 
 :root {
